--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "react-start": "react-scripts start"
+    "build": "npm run build"
   },
   "eslintConfig": {
     "extends": [
