--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://harimama1823.github.io/birthday-surprise",
   "name": "birthday-surprise",
   "version": "0.1.0",
   "private": true,
