--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "react-start": "react-scripts start",
-    "build": "npm run build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
