--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://harimama1823.github.io/birthday-surprise",
   "name": "birthday-surprise",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +19,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "react-start": "react-scripts start"
+    "build": "set NODE_OPTIONS= && react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +46,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.26.9",
+    "gh-pages": "^6.3.0",
     "npm-run-all": "^4.1.5"
   }
 }
